# image-classifier-dojo

./: .gitignore  Dockerfile  LICENSE  README.md  dotenv  pyproject.toml  requirements.txt  train.py
SCRATCH/: confusion_matrix_graph.py  plot_perclass_perf.py
core/: callbacks.py  datasets.py
core/patches/: model_summary_patch.py
src/: ensembles.py  train.py
src/dojo/: __main__.py  cli.py
src/dojo/homogenous_ensembles/: train_ensemble.py
src/dojo/multiclass/: models.py  train.py
src/dojo/multilabel/: train.py
src/dojo/schemas/: __init__.py  core.py
src/dojo/selfsupervised/: train.py
src/dojo/tools/: dataset_lists_from_folder.py
src/dojo/utils/: onnx_checkpoint.py
src/heterogenous_ensembles/: eval.py
src/homogenous_ensembles/: README.md  patches.py  train_ensemble.py
src/image_classifier_dojo/: __init__.py
src/multiclass/: callbacks.py  datasets.py  models.py  train.py
src/multilabel/: datasets.py  models.py  train.py
src/patches/: aim_patches.py
src/selfsupervised/: datasets.py  models.py  train.py
src/tools/: dataset_lists_from_folder.py
