[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "image_classifier_dojo"
dynamic = ["version"]
description = "Image-Classifier-Dojo model training package"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Sidney Batchelder", email = "sbatchelder@whoi.edu" }]

# --- Base dependencies ---
dependencies = [
  "pydantic~=2.11",
  "humanize~=4.11.0",
  "coolname~=2.2.0",
  "tqdm~=4.67.0",
  "hydra-zen~=0.15.0",
]

# Optional dev and examples extras
[project.optional-dependencies]
train = [
  "numpy~=2.2.0",
  "torch~=2.9.0",
  "torchvision~=0.24.0",
  "lightning~=2.5.5",
  "torchmetrics[visual]~=1.6.0",
  "onnx~=1.17.0",
  "plotly~=5.24.1",
  "aim~=3.27.0",
  "h5py~=3.10",
]
ssl = [
  "lightly~=1.5.15",
  "pyifcb @ git+https://github.com/joefutrelle/pyifcb.git@v1.2.1",
]
homo = [
  "torchensemble~=0.2.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[project.urls]
Homepage = "https://github.com/WHOIGit/image_classifier_dojo"

[tool.hatch.version]
source = "vcs"

# Build only our 'src' code path
[tool.hatch.build.targets.wheel]
packages = ["src/dojo", "src/image_classifier_dojo"]

# Ensure Hydra example configs are included in the wheel
# force-include maps on-disk paths to locations inside the wheel
#[tool.hatch.build.targets.wheel.force-include]
#"configs" = "image_classifier_dojo/configs"

# Keep sdist lean but include configs and scripts if you want them in source tarballs
[tool.hatch.build.targets.sdist]
include = [
  "pyproject.toml",
  "README.md",
  "src/**",
]

